
1.2.11 Release Fixes
===================
* LDEV-3456: Template interface for creating boilerplate text based lessons
This module has new calls to list the sequences in the root of a user's account and to 
render a learning design image, which allows other deployment options on the Blackboard side.
Also supports calls to the LAMS server to use a dummy course to suit the templates.

1.2.12 Release Fixes
===================
* LDEV-3456: Supports deleting learning designs.
* LDEV-3513: Transform lineitemId parameter stored in some older versions to the format required now
* LDEV-3510: LAMS Lessons always appear at the top of the content list - should able to be moved further down the list.
* LDEV-3521: Supporting an alternative URL for LAMS where needed for mixed https/http integrations.

1.2.13 Release Fixes
====================
* LDEV-3526: Switch webservice calls to POST.
* LDEV-3456: Adding support for a type field to categorise designs.

1.2.14 Release Fixes
====================
* LDEV-3456: Adding further POST support.

1.2.15 Release Fixes
1.2.16 Release Fixes
====================
* LDEV-3456: Adding new parameters to LAMSLearningDesign and StartLesson calls

1.2.17 Release Fixes
====================
* LDEV-3510: Previous releases were opening lessons in a new window due to a change made for LDEV-3510. 
Now reverted back to previous behaviour with lesson loading in the same tab.
* LKC-61: Gradebook syncing change
* LDEV-3621: Ability to import and use groups from integrated server

1.2.18 Release Fixes
====================
* LDEV-3399: Support Course Copy feature in Blackboard
* LDEV-3704: Ability to modify BB lessons' URL host name
* LDEV-3881: Increase popup size (to 1280x720)
* LDEV-3880: Notification ON by default with Blackboard integration

1.2.19 Release Fixes
====================
* LDEV-3399: Course Copy feature. Remove auxiliary building block and introduce special button to update LAMS links with new lesson ids.