@@ -127,3 +127,4 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 1.2.19 Release Fixes
 ====================
 * LDEV-3399: Course Copy feature. Remove auxiliary building block and introduce special button to update LAMS links with new lesson ids.
+* LDEV-3897: Ability to fix LAMS lessons in imported courses
